Sun Dec 27 23:32:26 2015  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_variant2val): refactoring.

Sun Dec 27 21:14:42 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* process.c (rb_execarg_parent_start1): need to convert the encoding to
	  ospath's one.

Sun Dec 27 20:54:22 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* process.c: use rb_w32_uchdir() instead of plain chdir() on Windows.
	  reported by naruse via twitter.

	* process.c (rb_execarg_addopt): need to convert the encoding to
	  ospath's one.

Sun Dec 27 20:00:31 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* enc/x_emoji.h: fix dead-link.

Sun Dec 27 19:55:55 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* doc/NEWS-2.3.0: fix a typo.

Sun Dec 27 18:08:15 2015  Kuniaki IGARASHI  <igaiga@gmail.com>

	* string.c (rb_str_lstrip_bang, rb_str_rstrip_bang): [DOC] Fix
	  ruby-doc comments for String#rstrip! and lstrip!.  It looks like
	  dropped bang.  [Fix GH-1175]

Sun Dec 27 15:14:20 2015  Eric Wong  <e@80x24.org>

	* io.c (io_getpartial): remove unused kwarg from template
	* test/ruby/test_io.rb (test_readpartial_bad_args): new
	  [Bug #11885]

Sun Dec 27 11:50:53 2015  Kuniaki IGARASHI  <igaiga@gmail.com>

	* test/ruby/test_string.rb (test_rstrip, test_lstrip): Add tests
	  for String#lstrip and rstrip.  The test cases are used from
	  string.c ruby-doc comments.  [Fix GH-1174]

Sun Dec 27 11:47:46 2015  Kuniaki IGARASHI  <igaiga@gmail.com>

	* test/ruby/test_string.rb (test_insert): Add test for
	  String#test_insert.  The test cases are written in string.c
	  comments as a reference.  [Fix GH-1173]

Sun Dec 27 11:03:33 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (show_bitstack): trace stack_type value if yydebug.

Sun Dec 27 10:03:14 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/depend (enc, trans): fix version dependency, shared object
	  files depend on the RUBY_SO_NAME value for runtime link.
